--- a/style.css
+++ b/style.css
@@ -249,5 +249,25 @@ _____    ____   _____   _    _  _____     __  __  ______  _   _  _    _
         align-self: center;
         padding: 10px;
     }
+
+
+
+
+
+
+
+
+
+
+    /* >>>>>>>>>>>>>>>>>>>>>>>>> */
+    /* >>>>>>>>>>>>>>>>>>>>>>>>> */
+    /* >>>>>>>>>>>>>>>>>>>>>>>>> */
+    /* >>>>>>>>>>>>>>>>>>>>>>>>> */
+
+
+
+    .masonry{
+        margin: 60px auto 0;
+    }
     
  }
