--- a/style.css
+++ b/style.css
@@ -330,14 +330,6 @@ _____    ____   _____   _    _  _____     __  __  ______  _   _  _    _
     }
 
 
-
-
-
-
-
-
-
-
     /* >>>>>>>>>>>>>>>>>>>>>>>>> */
     /* >>>>>>>>>>>>>>>>>>>>>>>>> */
     /* >>>>>>>>>>>>>>>>>>>>>>>>> */
@@ -348,5 +340,24 @@ _____    ____   _____   _    _  _____     __  __  ______  _   _  _    _
     .masonry{
         margin: 60px auto 0;
     }
+
+
+
+    /* 
+_____    ____   _____   _    _  _____     __  __  ______  _   _  _    _
+|  __ \  / __ \ |  __ \ | |  | ||  __ \   |  \/  ||  ____|| \ | || |  | |
+| |__) || |  | || |__) || |  | || |__) |  | \  / || |__   |  \| || |  | |
+|  ___/ | |  | ||  ___/ | |  | ||  ___/   | |\/| ||  __|  | . ` || |  | |
+| |     | |__| || |     | |__| || |       | |  | || |____ | |\  || |__| |
+|_|      \____/ |_|      \____/ |_|       |_|  |_||______||_| \_| \____/ */
+
+.arrow{
+    display: none;
+}
+.close{
+    font-size: calc(2.5vw + 30px);
+    top: 35px;
+    right: 50px;
+}
     
  }
