--- a/style.css
+++ b/style.css
@@ -76,11 +76,17 @@ body{
     text-transform: uppercase;
     font-family: Arial, Helvetica, sans-serif;
 }
+
 .nav_element:hover{
     color: orangered
 }
 .burgermenu, .xmenu{
     display: none;
+}
+
+.active_nav_button{
+    color: orangered;
+    text-decoration: underline;
 }
 
 /* 
@@ -226,8 +232,52 @@ _____    ____   _____   _    _  _____     __  __  ______  _   _  _    _
 }
 
 
+/* 
+       d8888 888888b.    .d88888b.  888     888 88888888888 
+      d88888 888  "88b  d88P" "Y88b 888     888     888     
+     d88P888 888  .88P  888     888 888     888     888     
+    d88P 888 8888888K.  888     888 888     888     888     
+   d88P  888 888  "Y88b 888     888 888     888     888     
+  d88P   888 888    888 888     888 888     888     888     
+ d8888888888 888   d88P Y88b. .d88P Y88b. .d88P     888     
+d88P     888 8888888P"   "Y88888P"   "Y88888P"      888     
+*/
 
 
+
+
+
+.about{
+    display: grid;
+    grid-template-columns: minmax(400px,1fr) minmax(100px,1fr) ;
+    color: aliceblue;
+    margin: 20px auto;
+    padding: 020px;
+    gap: 50px;
+    max-width: 1200px;
+}
+.about_paragraph , .about_contact{
+    font-size: calc(0.5vw + 10px);
+}
+.about_contact a{
+ color: aliceblue;
+ font-weight: 700;
+}
+.about_img_wrapper{
+    text-align: end;
+}
+.about_img_wrapper img{
+    width: 100%;
+}
+
+
+.about_hidden{
+    display: none;
+}
+
+.open_menu_btn{
+    display: none;
+}
 
 
 
@@ -235,15 +285,33 @@ _____    ____   _____   _    _  _____     __  __  ______  _   _  _    _
 
 
 /* 
-888b     d888  .d88888b.  888888b.   8888888 888      8888888888
-8888b   d8888 d88P" "Y88b 888  "88b    888   888      888
-88888b.d88888 888     888 888  .88P    888   888      888
-888Y88888P888 888     888 8888888K.    888   888      8888888
-888 Y888P 888 888     888 888  "Y88b   888   888      888
-888  Y8P  888 888     888 888    888   888   888      888
-888   "   888 Y88b. .d88P 888   d88P   888   888      888
-888       888  "Y88888P"  8888888P"  8888888 88888888 8888888888
- */
+
+888b     d888  .d88888b.  888888b.  8888888 888      8888888888         
+8888b   d8888 d88P" "Y88b 888  "88b   888   888      888                
+88888b.d88888 888     888 888  .88P   888   888      888                
+888Y88888P888 888     888 8888888K.   888   888      8888888            
+888 Y888P 888 888     888 888  "Y88b  888   888      888                
+888  Y8P  888 888     888 888    888  888   888      888                
+888   "   888 Y88b. .d88P 888   d88P  888   888      888                
+888       888  "Y88888P"  8888888P" 8888888 88888888 8888888888         
+                                                                       
+       888   888               888   888               888   888             
+       888   888               888   888               888   888             
+       888   888               888   888               888   888             
+       888   888               888   888               888   888                                                                                
+       888   888               888   888               888   888             
+       888   888               888   888               888   888             
+       888   888               888   888               888   888             
+       888   888               888   888               888   888                                                                                 
+Y88b               d88P Y88b               d88P Y88b               d88P 
+ Y88b             d88P   Y88b             d88P   Y88b             d88P  
+  Y88b           d88P     Y88b           d88P     Y88b           d88P   
+   Y88b         d88P       Y88b         d88P       Y88b         d88P    
+    Y88b       d88P         Y88b       d88P         Y88b       d88P     
+     Y88b     d88P           Y88b     d88P           Y88b     d88P      
+      Y88b   d88P             Y88b   d88P             Y88b   d88P       
+       Y88b d88P               Y88b d88P               Y88b d88P        
+*/
 
  @media(max-width: 730px){
    
@@ -270,8 +338,8 @@ _____    ____   _____   _    _  _____     __  __  ______  _   _  _    _
     }
     
     .nav_close{
-        height: 30px;
-        background-color: rgba(0, 0, 0, 0.455);
+        height: 40px;
+        background-color: rgb(18, 18, 18);
         transition: 0;
     }
     .nav_element{
@@ -329,6 +397,11 @@ _____    ____   _____   _    _  _____     __  __  ______  _   _  _    _
         padding: 10px;
     }
 
+    .nav_burger .active_nav_button{
+        color: orangered;
+        text-decoration: underline;
+    }
+
 
     /* >>>>>>>>>>>>>>>>>>>>>>>>> */
     /* >>>>>>>>>>>>>>>>>>>>>>>>> */
@@ -351,13 +424,67 @@ _____    ____   _____   _    _  _____     __  __  ______  _   _  _    _
 | |     | |__| || |     | |__| || |       | |  | || |____ | |\  || |__| |
 |_|      \____/ |_|      \____/ |_|       |_|  |_||______||_| \_| \____/ */
 
-.arrow{
-    display: none;
-}
-.close{
-    font-size: calc(2.5vw + 30px);
-    top: 35px;
-    right: 50px;
-}
+    .arrow{
+        display: none;
+    }
+    .close{
+        font-size: calc(2.5vw + 30px);
+        top: 35px;
+        right: 50px;
+    }
+
+
+
+    /* about */
+
+
+    .about{
+        display: grid;
+        gap: 0;
+        grid-template-columns: 1fr ;
+        color: aliceblue;
+        margin: -10px auto;
+        padding: 0 20px;
+        max-width: 1200px;
+    }
+    .about_paragraph , .about_contact{
+        font-size: calc(1vw + 10px);
+    }
+    .about_contact a{
+     color: aliceblue;
+     font-weight: 700;
+    }
+    .about_img_wrapper{
+        text-align: end;
+        grid-area: 1;
+        height: 350px;
+        overflow: hidden;
+        margin: 0 -28px;
+    }
+    .about_img_wrapper img{
+        width: 100%;
+        object-position: 0 -70px;
+    }
+    .about_info_wrapper{
+        padding: 0 0 50px 0;
+    }
+    .about_hidden{
+        display: none;
+    }
+    .open_menu_btn{
+        display: block;
+        outline: none;
+        border: none;
+        box-shadow: none;
+        background-color: #ebebeb;
+        border: 1px solid #212121;
+        border-radius: 12px;
+        padding: 10px;
+        color: rgb(31, 31, 31);
+        font-size: 23px;
+        font-weight: 700;
+    }
+
+
     
- }
+}
