--- a/style.css
+++ b/style.css
@@ -118,24 +118,24 @@ _____    ____   _____   _    _  _____     __  __  ______  _   _  _    _
 .img_block{
     display: grid;
     align-items: center;
-
-    
-    /* transform: translateX(-100%); */
+    justify-content: center;
+    place-items: center;
+    min-height: 100vh;
+    height: 100vh;
+    height: 100dvh;
+    width: 100%;
 }
 
 
 
 .imgwrapper{
     position: absolute;
+    /* top: 0; */
     left: 0;
     width: 100%;
     height: auto;
     display: grid;
 }
-/* .imgwrapper_animate_left{
-    transform: translate(-100%);
-    transition: 1s;
-} */
 
 .img{
     max-width: 100vw;
